# BlogDemo

./: README.md  build.gradle  buildv21.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mafeibiao/testapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/mafeibiao/testapplication/: IMyAidlInterface.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/drawer/: base_drawer.cpp  base_drawer.h  bitmap_drawer.cpp  bitmap_drawer.h  triangle_drawer.cpp  triangle_drawer.h
app/src/main/cpp/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h  gl_render.cpp  gl_render.h  opengl_render.cpp  opengl_render.h
app/src/main/cpp/filter/adjust/: brightness_filter.cpp  brightness_filter.h  color_invert_filter.cpp  color_invert_filter.h  contrast_image_filter.cpp  contrast_image_filter.h  exposure_filter.cpp  exposure_filter.h  hue_filter.cpp  hue_filter.h  saturation_filter.cpp  saturation_filter.h  sharpen_filter.cpp  sharpen_filter.h
app/src/main/cpp/filter/base/: image_filter.cpp  image_filter.h
app/src/main/cpp/render/: image_render.cpp  image_render.h
app/src/main/cpp/utils/: opengl_utils.h  stb_image.h
app/src/main/java/com/luseen/luseenbottomnavigation/BottomNavigation/: BottomNavigationView.java
app/src/main/java/com/mafeibiao/testapplication/: CustomViewDemoActivity.java  CustomViewGroupDemoActivity.java  DefaultItemDecoration.java  MainActivity.java  MainAdapter.java  TestApplication.java
app/src/main/java/com/mafeibiao/testapplication/CustomView/: CircleView.java  MyEditText.java
app/src/main/java/com/mafeibiao/testapplication/LeakCanary/: DisplayUtils.java  HandlerActivity.java  LeakNavActivity.java  LeakNavAdapter.java  NonStaticActivity.java  SingleActivity.java  TestActivity.java
app/src/main/java/com/mafeibiao/testapplication/Messaging/: MessageActivity.java
app/src/main/java/com/mafeibiao/testapplication/MyTagFlowLayout/: MyTagAdapter.java  MyTagFlowLayout.java
app/src/main/java/com/mafeibiao/testapplication/bitmap/: BitmapActivity.java
app/src/main/java/com/mafeibiao/testapplication/contentProvider/: BookProvider.java  DbOpenHelper.java  ProviderActivity.java
app/src/main/java/com/mafeibiao/testapplication/customView/: CircleView.java  MyEditText.java
app/src/main/java/com/mafeibiao/testapplication/fragment/: AboutFragment.java  BestFragmentActivity.java  CategoryFragment.java  Constant.java  EasyFragmentActivity.java  FragmentActivity.java  GoodCarFragment.java  GoodFragment.java  GoodsFragment.java  IShow.java  TaskFragment.java
app/src/main/java/com/mafeibiao/testapplication/fragment_tabLayout_viewpager/: BaseFragment.java  MyPagerAdapter.java  PagerAdapter.java  TabActivity.java
app/src/main/java/com/mafeibiao/testapplication/intentservice/: MyIntentService.java
app/src/main/java/com/mafeibiao/testapplication/leakCanary/: DisplayUtils.java  HandlerActivity.java  LeakNavActivity.java  LeakNavAdapter.java  NonStaticActivity.java  SingleActivity.java  TestActivity.java
app/src/main/java/com/mafeibiao/testapplication/listview/: ListViewActivity.java  ListViewAdapter.java
app/src/main/java/com/mafeibiao/testapplication/messaging/: MessageActivity.java
app/src/main/java/com/mafeibiao/testapplication/myTagFlowLayout/: MyTagAdapter.java  MyTagFlowLayout.java
app/src/main/java/com/mafeibiao/testapplication/nativeService/: ITest.h  Test.cpp
app/src/main/java/com/mafeibiao/testapplication/recyclerview/: GuideMainActivity.java
app/src/main/java/com/mafeibiao/testapplication/xuliehua/: TestActivity.java
app/src/main/java/com/poney/blogdemo/: DemoActivity.java  MainActivity.java
app/src/main/java/com/poney/blogdemo/demo1/: BitmapDrawer.kt  DemoActivity.java  EGLDemoActivity.java  IDrawer.kt  TriangleDrawer.kt
app/src/main/java/com/poney/blogdemo/demo2/: CameraActivity.kt  CameraXActivity.kt  H264AACFFMpegActivity.kt  H264AACMediaCodecActivity.kt  H264AsyncMediaCodecActivity.kt  Mp4MediaCodecActivity.kt
app/src/main/java/com/poney/blogdemo/drawer/: BitmapDrawer.kt  IDrawer.kt  (+1 more)
app/src/main/java/com/poney/utils/: AutoFitSurfaceView.kt
app/src/main/res/drawable/: checked_bg.xml  ic_default.xml  ic_default_select.xml  ic_switch_camera.xml  normal_bg.xml  selector_image_edit_adjust_default.xml  tag_bg.xml  text_color.xml
app/src/main/res/layout/: activity_best_fragment.xml  activity_bitmap.xml  activity_camera.xml  activity_camerax.xml  activity_codec_h_a.xml  activity_codec_mp4.xml  activity_demo.xml  activity_easy_fragment.xml  activity_egl_demo.xml  activity_f_f_a_v_player.xml  activity_ff_play.xml  activity_ffmpeg_h_a.xml  activity_fragment.xml  activity_handler.xml  activity_list_view.xml  activity_main.xml  activity_media_codec_a_v.xml  activity_message.xml  activity_nav.xml  activity_non_static.xml  activity_provider.xml  activity_recycler_guide.xml  activity_recycler_view.xml  activity_single.xml  activity_tab.xml  activity_test.xml  activity_test2.xml  custom_view.xml  custom_viewgroup.xml  fragment_about.xml  fragment_category.xml  fragment_goodcar.xml  fragment_goods.xml  fragment_task.xml  item_menu_main.xml  list_view_item_simple.xml  tag_view.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/mafeibiao/testapplication/: ExampleUnitTest.java
media/: CMakeLists.txt  build.gradle
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: CMakeLists.txt  native-lib.cpp
media/src/main/cpp/encode/: native_code.cpp
media/src/main/cpp/ffmpeg/: ffplay_demo.cpp
media/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
media/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h
media/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h
media/src/main/cpp/ffmpeg/include/libavutil/: avassert.h  hwcontext_d3d11va.h
media/src/main/cpp/ffmpegdemo/: ffmpegdemo.cpp
media/src/main/java/com/poney/encoder/: H264MediaCodecEncoder.java  NativeEncoder.java
media/src/main/res/layout/: activity_media_demo.xml
(+137 files in other folders)
